fix text alignment

--- a/app/assets/stylesheets/home/buttons.scss
+++ b/app/assets/stylesheets/home/buttons.scss
@@ -217,16 +217,12 @@
   }
   #staff-pick-button {
     position: relative;
-    z-index: 1000;
-    background-size: contain;
-    background-position: center center;
-    display: flex;
     color: white;
     font-family: 'open-sans-regular';
     font-size: 13px;
+    display: flex;
     justify-content: center;
     align-items: center;
-    background-repeat: no-repeat;
     height: 36px;
     width: 100%;
     background-color: $link-blue;
@@ -234,6 +230,7 @@
     outline: none;
     border: none;
     margin: 4px 0;
+    cursor: pointer;
     .fa {
       margin-left: 10px;
       font-size: 20px;
